# pdfgen

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  pyproject.toml
examples/invoice/data/: data.json
examples/letter/data/: data.json
examples/report/data/: data.json
src/pdfgen/: __init__.py  __main__.py  cli.py  merge.py  renderer.py  scaffold.py  templating.py
src/pdfgen/templates/blank/: manifest.json  template.html
src/pdfgen/templates/invoice/: manifest.json  template.html
src/pdfgen/templates/letter/: manifest.json  template.html
src/pdfgen/templates/report/: manifest.json  template.html
tests/: test_core.py
