[project]
name = "pdfgen"
version = "0.1.0"
description = "Template driven PDF generation CLI for agents. HTML templates + JSON data -> PDF via Playwright (Chromium). Merge and outline supported."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "playwright>=1.45",
    "pypdf>=4.3",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pdfgen = "pdfgen.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdfgen = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
